[package]
name = "rhytm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = { version = "*", features = ["serde"] }
humansize = "*"
indicatif = { version = "*", features = ["improved_unicode"] }
indicatif-log-bridge = "*"
simplelog = { version = "*", features = ["paris"] }
interprocess = "*"

# python
pyo3 = "*"

#SerDe
serde = { version = "*", features = ["derive"] }
serde_json = "*"

clap = { version = "*", features = ["derive"] }
anyhow = "*"
regex = "*"
num-traits = "*"
num-derive = "*"
tokio = { version = "*", features = ["net", "rt-multi-thread", "macros"] }
diesel = { version = "*", features = ["sqlite"] }
diesel_migrations = { version = "*", features = ["sqlite"] }
